<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbarInclude"/>
    <androidx.drawerlayout.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarInclude"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ListView
            android:id="@+id/listview_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/clear_button"
            android:layout_below="@+id/ingredientSearch"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/search_button"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="3dp"
            android:backgroundTint="@color/red"
            android:text="@string/clear"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/search"
            android:textSize="20sp"
            android:textStyle="bold" />
            <!--Search view for filtering list view-->

            <SearchView
                android:id="@+id/ingredientSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:iconifiedByDefault="false"
                android:padding="4dp"
                android:queryHint="@string/ingredient_search_placeholder" />

        </RelativeLayout>

        <include layout="@layout/nav_view" />

    </androidx.drawerlayout.widget.DrawerLayout>
</RelativeLayout>

