<resources>
    <string name="app_name">DrinkFinder</string>
    <string name="ingredient_search_placeholder">Search ingredient</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="search">Search</string>
    <string name="ingredients_switch">Drinks contain all ingredients</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="add_delete_drink_from_favourites">Add/Delete drink from favourites</string>
    <string name="find_drink_by_ingredients">Find drink by ingredients</string>
    <string name="find_drink_by_name">Find drink by name</string>
    <string name="favourite_drinks">Favourite drinks</string>
    <string name="clear">Clear</string>
    <string name="show_selected_ingredients_option">Show selected ingredients</string>
    <string name="about">About</string>
    <string name="abouttext">This application has been made for Android course in Wroclaw University of Science and Technology.\nApp has been made with the use of: https://www.thecocktaildb.com\n\nAuthors:\nMichał Kaźmierczak\nKacper Wójcicki\nJan Skibińki</string>
</resources>