<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/overflowMenu"
        android:icon="@drawable/dots"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/show_selected_ingredients_option"
                android:title="@string/show_selected_ingredients_option" />
        </menu>
    </item>
</menu>